<resources>
    <string name="app_name">Procrastinot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile_progress_gallery_title">Progress gallery</string>
    <string name="profile_habits_title">Ongoing habits</string>
    <string name="profile_toolbar_title">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register">Register</string>
    <string name="user_name">User\'s name</string>
    <string name="user_name_editable">User\'s name editable</string>
    <string name="user_email">User\'s email</string>
    <string name="user_email_editable">User\'s email editable</string>
    <string name="user_username">User\'s username</string>
    <string name="coach_request">Ask for coaching</string>
    <string name="edit_icon">Button to switch to edit mode</string>
    <string name="save_icon">Button to save and switch to view mode</string>
    <string name="already_have_logged_in">Already have an account? Login</string>
    <string name="still_not_have_an_account">Still don\'t have an account? Register now</string>\
    <string name="token_error">Error! Unable to retrieve user\'s token</string>
    <string name="user_data_error">Error! Unable to retrieve user\'s data</string>
    <string name="invalid_time_error">Please enter a valid time (HH:MM)</string>
    <string name="try_again_error">Try again</string>
    <string name="success_habit">Habit successfully saved!</string>\
    <string name="error_register">Encountered error while registering with google</string>
    <string name="error_empty_register">No value inserted. Please fill in the email and password to sign up</string>
    <string name="error_empty_login">No value inserted. Please fill in the email and password to sign in</string>
    <string name="success_register">Successfully registered!</string>
    <string name="success_login">Successfully logged in!</string>\
    <string name="missing_name">Missing name</string>
    <string name="home">Home</string>
    <string name="habits">Habits</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="today">Today</string>
    <string name="feed">Feed</string>
    <string name="summary">Summary</string>
    <string name="develop">Develop</string>
    <string name="week">Week</string>
    <string name="list">List</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="search_activity">Search Activity</string>
    <string name="settings_activity">Settings Activity</string>
    <string name="menu">Menu</string>
    <string name="week_fragment">Week Fragment</string>
    <string name="summary_fragment">Summary Fragment</string>
    <string name="today_fragment">Today Fragment</string>
    <string name="list_fragment">List Fragment</string>
    <string name="feed_fragment">Feed Fragment</string>
    <string name="select_picture">Select Picture</string>
    <string name="progress_indicator">Uploading File..</string>
    <string name="file_name_date">yyy_MM_dd_HH_mm_ss</string>
    <string name="try_again">Try again</string>
    <string name="failed">Failed</string>
    <string name="notification_content_title">Habit reminder</string>
    <string name="notification_content_text">Please finish your habit</string>
    <string name="notification_permission_not_granted">Notification permission not granted</string>
    <string name="notification_permission_granted">Notification permission granted</string>
    <string name="show_notification_button_text">Show notification</string>
    <string name="grant_notification_permission_button_text">Grant notification permission</string>
    <string name="habit_notification_channel_name">Habit reminder</string>
    <string name="habit_notification_channel_description">Used for receiving habit reminders</string>
    <string name="notification_info_negative_button_text">Skip</string>
    <string name="notification_info_positive_button_text">I am in</string>
    <string name="notification_info_title">Get notified!</string>
    <string name="notification_info_description">Stay on top of your habits with notification reminders before the start of your habit</string>
    <string name="create_habit_end_time_button_text">Choose End Time</string>
    <string name="create_habit_start_time_button_text">Choose Start Time</string>
    <string name="create_habit_end_time_text">Chosen end time = %s</string>
    <string name="create_habit_start_time_text">Chosen start time = %s</string>
    <string name="search_people">Search People</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="choose_username_hint">Pick a username</string>
    <string name="choose_username_button_text">Continue</string>
    <string name="choose_username_empty_username_message">Username cannot be blank, please pick a valid username</string>
    <string name="choose_username_fetch_error_message">Error while fetching username, please try again</string>
    <string name="choose_username_post_error_message">Error while confirming username, please try again</string>
    <string name="choose_username_feedback_minimum_characters">Username needs to more than 5 characters</string>
    <string name="choose_username_feedback_username_taken">The username is already taken!</string>
    <string name="choose_username_feedback_username_available">The username is available!</string>
    <string name="choose_username_feedback_username_loading">Checking if username is available...</string>
    <string name="choose_username_pick_username_error">Error occurred while picking username, please try again!</string>
    <string name="choose_username_pick_username_success">Username picked and updated successfully</string>
    <string name="choose_username_check_username_error">Error occurred while checking username, please try again!</string>
    <string name="sample_post_content">Test Image</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="take_photo">Take photo</string>
    <string name="take_photo_title">Take Photo</string>
    <string name="image_captured">Image captured</string>
    <string name="no_image_captured">No image captured</string>
    <string name="no_image_data">No image data</string>
    <string name="image_uploaded">Image uploaded successfully</string>
    <string name="about">About</string>
    <string name="users_on_our_platform">Users On Our Platform</string>
    <string name="uploaded_habits">Uploaded Habits</string>
    <string name="number_of_posts_icon">Number of posts icon</string>
    <string name="tasks_completed">Tasks Completed</string>
    <string name="procrastinot">Procrastinot</string>
    <string name="team">Team</string>
    <string name="number_of_users_icon">Number of users icon</string>
    <string name="loading">Loading...</string>
    <string name="number_of_completed_posts_icon">Number of completed posts icon</string>
    <string name="desc">Procrastinot is a productivity app developed as part of the EPFL Software Development Project class that aims to help users overcome procrastination and build healthy habits. The app provides a simple and effective way to track progress towards achieving personal goals and breaking bad habits. With Procrastinot, users can create custom tasks and set reminders to ensure that they stay on track. The app also includes a habit-building feature that helps users develop good habits by gradually increasing the frequency and duration of the desired behavior. In addition, Procrastinot provides a range of statistics and analytics to help users monitor their progress over time and identify areas for improvement. Overall, Procrastinot is a valuable tool for anyone looking to improve their productivity and overcome procrastination. Its intuitive interface, customizable features, and habit-building capabilities make it a useful addition to any individual\'s arsenal for self-improvement.</string>
    <string name="team_desc">Procrastinot was developed by a team of 5 students from EPFL\'s Software Development Project class. The team members are: Enrico Benedettini, David Bojkovski, Jorge Encinas, Mateo Echeverry Hoyos, Anirudhh Ramesh and Mak Fazlic</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="posted_habits">Posted habits: %s</string>
    <string name="avg_days_week">Avg. Days in Week: %s</string>
    <string name="earlystart">Earliest start: %s</string>
    <string name="lateend">Latest end: %s</string>
    <string name="following">Following: %s</string>
    <string name="followers">Followers: %s</string>
    <string name="change_username_button_text">Change username</string>
    <string name="total_number_ratings">(%s ratings)</string>
    <string name="coach_ratings_title">Coach ratings</string>
    <string name="fetch_coach_rating_error">Error occurred while fetching rating, we are sorry for the inconvenience!</string>
    <string name="coach_rating_5_star_indicator">5:</string>
    <string name="coach_rating_4_star_indicator">4:</string>
    <string name="coach_rating_3_star_indicator">3:</string>
    <string name="coach_rating_2_star_indicator">2:</string>
    <string name="coach_rating_1_star_indicator">1:</string>
    <string name="coaching">Coaching</string>
    <string name="requests">Requests</string>
    <string name="offers">Offers</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="uploading_your_photo_to_the_cloud">Uploading</string>
    <string name="go_back_to_home">Go back to home</string>
    <string name="no_habit_found">No habits found</string>
    <string name="select_a_habit">Please select a habit</string>
    <string name="done">Done!</string>
    <string name="hint_select_a_habit">Select a habit</string>
    <string name="rank">\"Rank \"</string>
    <string name="as_a_trainer">\" as a trainer\"</string>
    <string name="there_was_an_error">There was an error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="na">N/A</string>
    <string name="no_habits_found">No habits found</string>
    <string name="no_requests_for_coaching">There are no requests for coaching</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
</resources>