<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/todayFragment"
        android:icon="@drawable/today_24"
        android:iconTint="@color/dark_text"
        android:textColor="@color/dark_text"
        android:title="@string/today" />

    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/feed_24"
        android:iconTint="@color/dark_text"
        android:textColor="@color/dark_text"
        android:title="@string/feed" />

    <item
        android:id="@+id/summaryFragment"
        android:icon="@drawable/baseline_featured_play_list_24"
        android:iconTint="@color/dark_text"
        android:textColor="@color/dark_text"
        android:title="@string/summary" />

</menu>