<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".takephoto.TakePhotoActivity"
    tools:openDrawer="start">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_bar_background"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/about"
                android:textColor="@color/dark_text"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_imageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:padding="8dp"
                android:src="@mipmap/ic_launcher" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/users_on_our_platform"
                    android:textColor="@color/dark_text"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/users_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_users"
                        android:contentDescription="@string/number_of_users_icon"/>

                    <TextView
                        android:id="@+id/users"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uploaded_habits"
                    android:textColor="@color/dark_text"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">


                    <ImageView
                        android:id="@+id/posts_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_posts"
                        android:contentDescription="@string/number_of_posts_icon"
                        android:layout_marginStart="16dp"/>

                    <TextView
                        android:id="@+id/posts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks_completed"
                    android:textColor="@color/dark_text"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    />
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/completed_posts_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_completed_posts"
                        android:contentDescription="@string/number_of_completed_posts_icon"
                        android:layout_marginStart="16dp"/>

                    <TextView
                        android:id="@+id/compl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"/>

                </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/procrastinot"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/desc"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                />

            <TextView
                android:id="@+id/credits_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp" />

            <TextView
                android:id="@+id/credits_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/team_desc"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                />

            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_1_0"
                android:textSize="14sp"
                android:gravity="end"
                android:paddingTop="16dp" />

        </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
    </ScrollView>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:backgroundTint="@color/drawer_background"
        android:drawablePadding="50dp"
        android:fitsSystemWindows="true"
        app:drawerLayoutCornerSize="20dp"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/dark_text"
        app:menu="@menu/nav_menu" />
</androidx.drawerlayout.widget.DrawerLayout>


